syntax = "proto3";

option csharp_namespace = "Server";

package messange;

// The greeting service definition.
service Messenger {
  // Sends a greeting
  rpc Recieve (SentMessage) returns (StatusReply);
  rpc GetAllMessages(AllMessageRequest) returns (AllMessagesReply);
  rpc GetVersion(Empty) returns (VersionsReply);
}

// The request message containing the user's name.
message SentMessage {
  string name = 1;
  string text = 2;
}

// The response message containing the greetings.
message StatusReply {
  int32 statusCode = 1;
  string message = 2;
  string time = 3;
}

message UserMessage {
  string name = 1;
  string text = 2;
  string time = 3;
}

message AllMessageRequest {
    string time = 1;
}

message Empty {

}

message AllMessagesReply {
  int32 statusCode = 1;
  repeated UserMessage userMessages = 2;
}

message VersionsReply {
    int32 statusCode = 1;
    string version = 2;
}
